tests/data/negative/test_asgn_data_cn_arr_ptr.orb
data Foo {
    i32 cn x = 10;
}

fnc main() {
    Foo[4] f1;
    Foo[4]* f2 = &f1;
    Foo[4] f3;
    *f2 = f3;
}